src/objects/Test_Case__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preconditions__c</fullName>
        <label>Preconditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <label>User Story</label>
        <type>Url</type>
    </fields>
    <label>Test Case</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{0000000000}</displayFormat>
        <label>Test Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>add_project_to_test_case</fullName>
        <active>true</active>
        <description>Controles if the project added to the test case has a status of Ongoing or Proposed</description>
        <errorConditionFormula>OR(ISPICKVAL(Project__r.Status__c, &quot;Finished&quot;),
ISPICKVAL(Project__r.Status__c, &quot;Cancelled&quot;),
		ISBLANK(TEXT(Project__r.Status__c)))</errorConditionFormula>
        <errorMessage>The Project status must be Ongoing or Proposed to add the Test Case</errorMessage>
    </validationRules>
</CustomObject>